[package]
name = "sys-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.12"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.1"
serde = { version = "*", features = ["derive"] }